# stakk

./: ANALYSIS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RESEARCH-interactive-selector.md  ROADMAP.md  dist-workspace.toml  mise.toml  release-plz.toml  renovate.json  test-workflow.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
media/: stakk.asciinema
src/: auth.rs  error.rs  main.rs  select.rs
src/cli/: auth.rs  graph.rs  mod.rs  submit.rs
src/config/: mod.rs
src/forge/: comment.rs  default_comment.md.jinja  github.rs  mod.rs
src/graph/: mod.rs  types.rs
src/jj/: mod.rs  remote.rs  runner.rs  types.rs  version.rs
src/select/: app.rs  bookmark_gen.rs  bookmark_widget.rs  event.rs  graph_layout.rs  graph_widget.rs  mod.rs  tfidf.rs
src/submit/: mod.rs  trailers.rs
src/submit/unwrap/: mod.rs
src/submit/unwrap/test_corpus/: already_unwrapped.expected.md  atx_headers.expected.md  atx_headers.md  blockquotes.expected.md  fenced_code_block.expected.md  indented_code_block.expected.md  list_item_continuation.expected.md  list_item_continuation.md  mixed_content.expected.md  mixed_content.md  nested_fenced_code.expected.md  ordered_list.expected.md  simple_paragraph.expected.md  simple_paragraph.md  table_rows.md  thematic_break.expected.md  tilde_code_block.expected.md  trailing_leading_whitespace.expected.md  trailing_leading_whitespace.md  two_paragraphs.expected.md  two_paragraphs.md  unordered_list.md
