[package]
name = "stakk"
version = "0.2.2"
edition = "2024"
repository = "https://github.com/glennib/stakk"
description = "A CLI tool that bridges Jujutsu (jj) bookmarks to GitHub stacked pull requests"
license = "MIT OR Apache-2.0"
authors = ["Glenn Bitar <glennbitar@gmail.com>"]

[[bin]]
name = "stakk"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.66"
console = "0.16"
futures = "0.3"
inquire = { version = "0.9", default-features = false, features = ["console"] }
http = "1.4.0"
indicatif = "0.18"
miette = { version = "7", features = ["fancy"] }
octocrab = "0.49.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
strip = true
lto = "fat"
codegen-units = 1
