[package]
name = "stakk"
version = "1.4.0"
edition = "2024"
repository = "https://github.com/glennib/stakk"
description = "A CLI tool that bridges Jujutsu (jj) bookmarks to GitHub stacked pull requests"
license = "MIT OR Apache-2.0"
authors = ["Glenn Bitar <glennbitar@gmail.com>"]
readme = "README.md"
keywords = ["jujutsu", "jj", "github", "stacked-prs", "pull-request"]
categories = ["command-line-utilities", "development-tools"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
doc_markdown = "allow"
doc_link_with_quotes = "allow"

[[bin]]
name = "stakk"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.5.66"
console = "0.16"
crossterm = "0.29"
futures = "0.3"
http = "1.4.0"
indicatif = "0.18"
miette = { version = "7", features = ["fancy"] }
minijinja = { version = "2", default-features = false, features = ["builtins", "serde"] }
octocrab = "0.49.5"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
strip = true
lto = "fat"
codegen-units = 1
